[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
name = "libutp-sys"
version = "0.1.0"
categories = [
    "api-bindings",
    "networking",
]
description = "Raw bindings to libutp"
license = "MIT OR Apache-2.0"

[build-dependencies]
bindgen = "~0.42.1"

[dependencies]
libc = "0.2"
nix = "0.11.0"
