[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
categories = [
    "api-bindings",
    "networking",
]
description = "Raw bindings to libutp"
license = "MIT OR Apache-2.0"
name = "libutp-sys"
version = "0.1.0"

[build-dependencies]
bindgen = "~0.42.1"
cc = "1.0.25"
unwrap = "1.2.1"

[dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.6"
